export const snapshot = {};

snapshot[`Document Delete Command - Help Text 1`] = `
stdout:
"
Usage: delete [documentId]

Description:

  Delete a document (moves to trash)

Options:

  -h, --help              - Show this help.                                     
  -y, --yes               - Skip confirmation prompt                            
  --no-color              - Disable colored output                              
  --bulk        <ids...>  - Delete multiple documents by slug or ID             
  --bulk-file   <file>    - Read document slugs/IDs from a file (one per line)  
  --bulk-stdin            - Read document slugs/IDs from stdin                  

"
stderr:
""
`;

snapshot[`Document Delete Command - Soft Delete 1`] = `
stdout:
"✓ Deleted document: Test Document
"
stderr:
""
`;

snapshot[`Document Delete Command - Document Not Found 1`] = `
stdout:
""
stderr:
"Document not found: nonexistent123
"
`;

snapshot[`Document Delete Command - Bulk Delete 1`] = `
stdout:
"Found 2 document(s) to delete.

✓ Successfully deleted 2 documents
"
stderr:
""
`;

snapshot[`Document Delete Command - Permission Error 1`] = `
stdout:
""
stderr:
\`Failed to delete document: Error: You don't have permission to delete this document: {"response":{"errors":[{"message":"You don't have permission to delete this document","extensions":{"code":"FORBIDDEN"}}],"status":200,"headers":{}},"request":{"query":"mutation DeleteDocument(\$id: String!) {\\\\n  documentDelete(id: \$id) {\\\\n    success\\\\n  }\\\\n}","variables":{"id":"doc-uuid-123"}}}
    at runRequest (file:///home/exedev/.cache/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/helpers/runRequest.ts:105:12)
    at eventLoopTick (ext:core/01_core.js:187:7)
    at async GraphQLClient.request (file:///home/exedev/.cache/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/classes/GraphQLClient.ts:131:22)
    at async handleSingleDelete (file:///home/exedev/workspace/linear-cli/src/commands/document/document-delete.ts:121:20)
    at async Command.actionHandler (file:///home/exedev/workspace/linear-cli/src/commands/document/document-delete.ts:60:7)
    at async Command.execute (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1940:7)
    at async Command.parseCommand (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1772:14)
    at async Object.fn (file:///home/exedev/workspace/linear-cli/test/commands/document/document-delete.test.ts:215:7)
    at async runTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:263:5)
    at async snapshotTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:112:5) {
  response: {
    data: undefined,
    errors: [
      {
        message: "You don't have permission to delete this document",
        extensions: { code: "FORBIDDEN" }
      }
    ],
    extensions: undefined,
    status: 200,
    headers: Headers {
      "access-control-allow-origin": "*",
      "content-type": "application/json",
      date: "Mon, 01 Jan 2024 00:00:00 GMT",
      vary: "Accept-Encoding"
    }
  },
  request: {
    query: "mutation DeleteDocument(\$id: String!) {\\\\n" +
      "  documentDelete(id: \$id) {\\\\n" +
      "    success\\\\n" +
      "  }\\\\n" +
      "}",
    variables: { id: "doc-uuid-123" }
  }
}
\`
`;

snapshot[`Document Delete Command - Missing ID 1`] = `
stdout:
""
stderr:
"Document ID required. Use --bulk for multiple documents.
"
`;
